Feat/snapshots (#33)
* adverts snapshot

* hardened snapshots

* tests for snapshots

* stricter validation of incoming adverts

---------
