# openapi.yml
@@ -197,6 +197,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Options'
+
   /api/v1/{namespace}/healthcheck:
     get:
       operationId: healthCheck
@@ -219,6 +220,60 @@ paths:
                 properties:
                   status:
                     type: string
+
+  /api/v1/{namespace}/snapshot/{collection}:
+    get:
+      operationId: snapshot
+      summary: Download snapshot
+      tags:
+        - DevOps
+      parameters:
+        - name: namespace
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: collection
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'JSON snapshot of collection'
+          content:
+            application/json:
+              schema:
+                type: object
+    patch:
+      operationId: importSnapshot
+      summary: Update instance with data from snapshot if not already present
+      tags:
+        - DevOps
+      parameters:
+        - name: namespace
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: collection
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'Operation status'
+          content:
+            application/json:
+              schema:
+                type: object
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
 components:
   schemas:
     GraphQLQuery:
